Fixes for getposition, added new "towards" and "distanceto" commands. Corrected shader for ANGLE bug 412 which is now reported. Fix to "setposition" now respects pen state. Added scrollbar to command buffer and removed unselectability.

--- a/MathClient/src/main/webapp/css/client.css
+++ b/MathClient/src/main/webapp/css/client.css
@@ -19,9 +19,11 @@ canvas {
     background: black;
 }
   
-.flc-math-errors: { color: red; font-weight: bold; } 
+.flc-math-errors { color: red; font-weight: bold; } 
 
-.code: {
+.flc-math-commands { overflow-y: auto; }
+
+.code {
    border: none;
    background: black;
 }
